# axion

./: AGENTS.md  Cargo.toml  TODO.md
docs/: spec.md
examples/: hello.ax
stdlib/: array.ax  ffi.ax  hashmap.ax  iter.ax  math.ax  number.ax  option.ax  prelude.ax  ptr.ax  range.ax  result.ax  string.ax
stdlib/collection/: btreeset.ax  hashmap.ax  hashset.ax
stdlib/core/: array.ax  display.ax  ffi.ax  fixed_array.ax  hash.ax  iter.ax  math.ax  number.ax  option.ax  ord.ax  range.ax  result.ax  str.ax  string.ax
stdlib/std/: io.ax  log.ax
stdlib/std/collection/: btreemap.ax  btreeset.ax  hashmap.ax  hashset.ax
